Redesigned navigation style, fixed bad active link appearance if links are too long.

--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,16 @@ background-attachment: fixed;
 
 .navMenu a,
 .navMenu2 a {
-border-bottom: 2px solid transparent;
+text-decoration: 2px underline dotted transparent;
 }
 .navMenu a:hover,
 .navMenu2 a:hover {
 transition: 0.3s;
-border-bottom: 2px dotted var(--brand);
+text-decoration: 2px underline dotted var(--brand);
 }
 .navMenuActive {
-border-bottom: 2px dotted var(--brand) !important;
+text-decoration: 2px underline dotted var(--c3) !important;
+color: var(--c3) !important;
 }
 
 /* Navigation CSS v.3.2.0 */
